--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,29 @@ nav button i, .dropbtn i {
     padding: 10px 24px;
 }
 
+    .tutorials {
+      margin-top: 100px; 
+      padding: 0 20px;
+    }
+
+    .tutorial {
+      margin-bottom: 20px;
+    }
+
+    .tutorial h3 {
+      font-size: 20px;
+      color: #333;
+    }
+
+    .tutorial p {
+      font-size: 16px;
+      color: #666;
+    }
+
+    section {
+      margin-bottom: 40px;
+    }
+
 footer{
     background: #1f1f1f;
     border-radius: 24px 24px 0 0;
